"Got rid of unneeded pages, added people page, fixed nav bar"

--- a/views/people.ejs
+++ b/views/people.ejs
@@ -1,8 +1,8 @@
 <!--
-File Name: index.ejs
+File Name: people.ejs
 Author: Taisen Colcher
 Website http://taisencolcher-advancedwebassignment1.azurewebsites.net/contact / TaisenColcher.com
-Home page for TaisenColcher.com
+Page to show my favourite people
  -->
 <% include partials/header.ejs %>
 
