--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,9 +38,7 @@
       <!-- <ul class="nav navbar-nav navbar-left">  RETURN LATER IF TABS DONT WORK  -->
         <ul class="nav nav-tabs nav-justified">
         <li role="presentation" class="active"><a href="/">Home</a></li>
-        <li ><a href="/projects">Projects</a></li>
-        <li ><a href="/services">Services</a></li>
-        <li ><a href="/about">About Me</a></li>
+        <li ><a href="/people">People</a></li>
         <li ><a href="/contact">Contact Me</a></li>
       
       </ul>
