--- a/public/content/app.css
+++ b/public/content/app.css
@@ -10,11 +10,24 @@ body {
        background-color: lightgrey;
 }
 
-#profilePicture {
+#edmonddantes {
     float: left;
     padding: 10px;   
-    height: 170px;
+    height: 230px;
 
+}
+
+#sherlockholmes {
+    position: absolute;
+    top: 400px;
+    left: 10px;
+    height: 230px;
+}
+
+#sherlocktext {
+    position: absolute;
+    top: 420px;
+    left: 230px;
 }
 
 #unityLogo {
