--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,9 +37,9 @@
   
       <!-- <ul class="nav navbar-nav navbar-left">  RETURN LATER IF TABS DONT WORK  -->
         <ul class="nav nav-tabs nav-justified">
-        <li role="presentation" class="active"><a href="/">Home</a></li>
-        <li ><a href="/people">People</a></li>
-        <li ><a href="/contact">Contact Me</a></li>
+        <li role="presentation" class="active"><a href="/"><i class="fa fa-home"></i>Home</a></li>
+        <li ><a href="/people"> <i class="fa fa-users"></i> People</a></li>
+        <li ><a href="/contact"> <i class="fa fa-envelope"></i>Contact Me</a></li>
       
       </ul>
     </div><!-- /.navbar-collapse -->
