--- a/views/people.ejs
+++ b/views/people.ejs
@@ -7,15 +7,20 @@ Page to show my favourite people
 <% include partials/header.ejs %>
 
 
-    <!-- MAIN CONTENT -->
-    <main class="container ">
+   
+    
 
         <h1>My Favourite People</h1>
 
+        <img id="edmonddantes" src="/images/edmonddantes.jpg" > </img>
        
+       <p> <pre> Edmond Dantès (alias the Count of Monte Cristo; his other aliases are Sinbad the Sailor, Abbé Busoni, and Lord Wilmore) Dantès is the dashing and romantic hero of the novel; at the age of nineteen, he is falsely imprisoned for a crime which he did not commit and is kept in the horrible dungeon of the Chateau d'If, where he undergoes unbelievable hardships and sufferings that would destroy an ordinary man. While imprisoned, Dantès hears a fellow prisoner digging a tunnel, and so he too begins digging. When the two men finally meet, the other prisoner turns out to be a learned Abbé, who teaches Dantès many languages, sciences, history, and other subjects. They become as father and son, and when the Abbé is about to die, he reveals to Dantès the hiding place of a long-secret buried treasure, consisting of untold wealth in gold coins, diamonds, and other precious jewels. After fourteen years of bitter imprisonment and hardships, and after a very daring and miraculous escape, Dantès is able to discover the buried treasure on the island of Monte Cristo, and so he buys the island. He becomes the Count of Monte Cristo and dedicates himself to becoming God's avenging angel. </pre> </p>
 
-        
+        <img id="sherlockholmes" src="/images/sherlockholmes.jpg"> </img>
        
+         <p id="sherlocktext"> Sherlock Holmes is the legendary great detective who solves even the most baffling cases with astute observation, deductive reasoning and very little people skills. As a "consulting detective," he favors reason and logic above all else and makes very few personal attachments beyond those that benefit him. He calls himself a "high functioning sociopath" because he does not make friends or understand emotions very well, beyond what can be studied. He would make a superior criminal if he were so inclined, but instead he assists the police, and Detective Inspector Greg Lestrade, on their most baffling cases.
+          </p>
+
 
 
             <% include partials/footer.ejs%>
