--- a/views/people.ejs
+++ b/views/people.ejs
@@ -5,6 +5,7 @@ Website http://taisencolcher-advancedwebassignment1.azurewebsites.net/contact / 
 Page to show my favourite people
  -->
 <% include partials/header.ejs %>
+<% include partials/navbar.ejs %>
 
 
    
@@ -18,9 +19,16 @@ Page to show my favourite people
 
         <img id="sherlockholmes" src="/images/sherlockholmes.jpg"> </img>
        
-         <p id="sherlocktext"> Sherlock Holmes is the legendary great detective who solves even the most baffling cases with astute observation, deductive reasoning and very little people skills. As a "consulting detective," he favors reason and logic above all else and makes very few personal attachments beyond those that benefit him. He calls himself a "high functioning sociopath" because he does not make friends or understand emotions very well, beyond what can be studied. He would make a superior criminal if he were so inclined, but instead he assists the police, and Detective Inspector Greg Lestrade, on their most baffling cases.
+         <p id="sherlockText"> Sherlock Holmes is the legendary great detective who solves even the most baffling cases with astute observation, deductive reasoning and very little people skills. As a "consulting detective," he favors reason and logic above all else and makes very few personal attachments beyond those that benefit him. He calls himself a "high functioning sociopath" because he does not make friends or understand emotions very well, beyond what can be studied. He would make a superior criminal if he were so inclined, but instead he assists the police, and Detective Inspector Greg Lestrade, on their most baffling cases.
           </p>
+          
+          <img id="eugeneboudin" src="/images/eugeneboudin.jpeg"> </img>
 
+          <p id="eugeneboudinText">
+              
+              Eugène Louis Boudin was one of the first French landscape painters to paint outdoors. Boudin was a marine painter, and expert in the rendering of all that goes upon the sea and along its shores. His pastels, summary and economic, garnered the splendid eulogy of Baudelaire; and Corot called him the "king of the skies".[1]
+            
+          </p>
 
 
             <% include partials/footer.ejs%>
