--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,6 +6,7 @@ Contact page with email form for TaisenColcher.com
  -->
 
 <% include partials/header.ejs %>
+<% include partials/navbar.ejs %>
 
 
     <!-- MAIN CONTENT -->
@@ -32,10 +33,10 @@ Contact page with email form for TaisenColcher.com
             </div>
             -->
             <div class="form-group">
-                <label for="inputMessage"><i class="fa fa-reply"></i> Your Message</label>
+                <label for="inputMessage"><i class="fa fa-reply"></i> Your Comments</label>
                 <textarea placeholder="Questions, Comments, & Concerns" class="form-control" rows="9" id="inputMessage"></textarea>
             </div>
-            <button type="submit" class="btn btn-default">Send Email</button>
+            <button type="submit" formaction="/" class="btn btn-default">Send Email</button>
         </form>
 
  
