--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@ Website http://taisencolcher-advancedwebassignment1.azurewebsites.net/contact / 
 Home page for TaisenColcher.com
  -->
 <% include partials/header.ejs %>
-
+<% include partials/navbar.ejs %>
 
     <!-- MAIN CONTENT -->
     <main class="container ">
