--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,34 +16,6 @@
     <link rel='stylesheet' href='Content/app.css' />
   </head>
   
+  <h1> My Favourite People </h1>
   
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <!-- old logo that I liked -->
-      <!-- <a class="navbar-brand" href="/"><i  class="fa fa-terminal fa-lg"></i> -->
-      <a  class="navbar-brand" href="/"><p style="color:black">Taisen Colcher</p>
-</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-  
-      <!-- <ul class="nav navbar-nav navbar-left">  RETURN LATER IF TABS DONT WORK  -->
-        <ul class="nav nav-tabs nav-justified">
-        <li role="presentation" class="active"><a href="/"><i class="fa fa-home"></i>Home</a></li>
-        <li ><a href="/people"> <i class="fa fa-users"></i> People</a></li>
-        <li ><a href="/contact"> <i class="fa fa-envelope"></i>Contact Me</a></li>
-      
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
   
