--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@ Home page for TaisenColcher.com
     <main class="container ">
 
         <h1>My Favourite People</h1>
+        
+        <img id="welcomeBanner" src="../images/welcome.jpg"> </img>
 
        
 
