--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,7 +14,7 @@
       </button>
       <!-- old logo that I liked -->
       <!-- <a class="navbar-brand" href="/"><i  class="fa fa-terminal fa-lg"></i> -->
-      <a  class="navbar-brand" href="/"><p style="color:black">Taisen Colcher</p>
+      <a  class="navbar-brand" href="/"><p style="color:black">Taisen's Favourite People</p>
 </a>
     </div>
 
