--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,12 +18,14 @@
 </a>
     </div>
 
+
+
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   
       <!-- <ul class="nav navbar-nav navbar-left">  RETURN LATER IF TABS DONT WORK  -->
         <ul class="nav nav-tabs nav-justified">
-        <li role="presentation" class="active"><a href="/"><i class="fa fa-home"></i>Home</a></li>
+        <li role="presentation" ><a href="/"><i class="fa fa-home"></i>Home</a></li>
         <li ><a href="/people"> <i class="fa fa-users"></i> People</a></li>
         <li ><a href="/contact"> <i class="fa fa-envelope"></i>Contact Me</a></li>
       
