--- a/views/people.ejs
+++ b/views/people.ejs
@@ -12,10 +12,14 @@ Page to show my favourite people
     
 
         <h1>My Favourite People</h1>
+        
+        <div id="edmondBox">
 
         <img id="edmonddantes" src="/images/edmonddantes.jpg" > </img>
        
        <p> <pre id="pre0"> Edmond Dantès (alias the Count of Monte Cristo; his other aliases are Sinbad the Sailor, Abbé Busoni, and Lord Wilmore) Dantès is the dashing and romantic hero of the novel; at the age of nineteen, he is falsely imprisoned for a crime which he did not commit and is kept in the horrible dungeon of the Chateau d'If, where he undergoes unbelievable hardships and sufferings that would destroy an ordinary man. While imprisoned, Dantès hears a fellow prisoner digging a tunnel, and so he too begins digging. When the two men finally meet, the other prisoner turns out to be a learned Abbé, who teaches Dantès many languages, sciences, history, and other subjects. They become as father and son, and when the Abbé is about to die, he reveals to Dantès the hiding place of a long-secret buried treasure, consisting of untold wealth in gold coins, diamonds, and other precious jewels. After fourteen years of bitter imprisonment and hardships, and after a very daring and miraculous escape, Dantès is able to discover the buried treasure on the island of Monte Cristo, and so he buys the island. He becomes the Count of Monte Cristo and dedicates himself to becoming God's avenging angel. </pre> </p>
+       
+        </div>
 
         <img id="sherlockholmes" src="/images/sherlockholmes.jpg"> </img>
        
